# numberedfiles

./: .gitignore  README.md  numberedfiles.cabal
src/: Lib.hs  Main.hs
